--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -101,7 +101,7 @@
                 else
                 {
                     <script type="text/javascript">
-                        $(document).ready(function () {
+                        $(function () {
                             $('.confirm-order-next-step-button').click(function () {
                                 //terms of services
                                 var termOfServiceOk = true;
