added some space to billing address grid

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1602,7 +1602,7 @@ table.cart .cart-item-row .qty-input {
 }
 
 .checkout-data .address-grid {
-	padding: 0;
+	padding-bottom: 0;
 }
 .checkout-data .address-grid .item-box {
 	text-align:center;
