--- a/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
@@ -24,7 +24,7 @@
                 <div class="block-title">
                     @T("Checkout.SelectBillingAddress")
                 </div>
-                <div class="address-grid">
+                <div class="block-body address-grid">
                     @(Html.DataList<AddressModel>(Model.ExistingAddresses, 3,
                     @<div class="item-box">
                         <div class="address-item">
