#111 send wishlist via e-mail doesn't work

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/EmailWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/EmailWishlist.cshtml
@@ -59,6 +59,8 @@
                         @Html.Raw(Html.GenerateCaptcha())
                     </div>
                 }
+                
+                <input type="hidden" name="send-email" value="send-email">
 
                 <div class="control-group">
                     <div class="controls">
