AddToCompare was not ajaxified in product lists (View: list)

--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBox.cshtml
@@ -21,9 +21,9 @@
     <div class="quicklinks">        
         @if (!Model.ProductPrice.DisableWishListButton)
         {
-            <a data-href='@Url.RouteUrl("AddProductVariantToCart", new { productVariantId = Model.DefaultProductVariantId, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
+            <a class="ajax-cart-link" 
+                data-href='@Url.RouteUrl("AddProductVariantToCart", new { productVariantId = Model.DefaultProductVariantId, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
                 href="#"
-                class="ajax-cart-link"
                 data-form-selector="#product-details-form"
                 data-type="wishlist"
                 data-action="add">
