Better display and handling when choosing a flag for languages

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1333,3 +1333,10 @@ table.order-edit td {
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0; 
 }
+#pnlAllFlags a.flag {
+    min-width: 100px;
+    display: inline-block;
+}
+#pnlAllFlags a.flag:hover {
+    text-decoration: none;
+}
